add wave controls

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <select id="dropdown">
             <option value="" disabled selected>Select a soundScape</option>
           </select>
+          <span><button type="button" id="about-button">ℹ︎</button></span>
         </div>
         <div id="button-container">
         </div>
@@ -22,6 +23,11 @@
         </div>
         <div id="synth-control">
           <button type="button" id="on-off-button" data-on="first">🔊</button>
+          <span id="wave-span">
+            <button type="button" id="sine-wave">∿</button>
+            <button type="button" id="square-wave">⎍</button>
+            <button type="button" id="saw-wave">⌁</button>
+          </span>
         </div>
         <div id="audio-container" hidden>
         </div>
