add styling and soundscape description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <select id="dropdown">
             <option value="" disabled selected>Select a soundScape</option>
           </select>
-          <span><button type="button" id="about-button">ℹ︎</button></span>
+          <span class="tooltip">ℹ︎<span class="tooltiptext">Tooltip text</span></span>
         </div>
         <div id="button-container">
         </div>
